# mc-gws

./: .gitignore  README.md  com.mcgws.briefing.plist  com.mcgws.midday.plist  com.mcgws.weekly.plist  com.mcgws.wrap.plist  config.example.json  install_launchd.sh  pyproject.toml
src/mcgws/: __init__.py  cli.py  config.py  formatting.py  gws.py  intelligence.py  log.py  notify.py  templates.py  weather.py
src/mcgws/commands/: calendar.py  drive.py  email.py  followups.py  people.py  search.py  smart.py  tasks.py
tests/: conftest.py  test_calendar.py  test_config.py  test_drive.py  test_email.py  test_followups.py  test_formatting.py  test_gws.py  test_integration.py  test_notify.py  test_search.py  test_smart.py  test_tasks.py  test_templates.py  test_weather.py
